{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 90,
  "lineage": "30a1c1bf-7c72-38a6-69ea-1feb3fe76f78",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:loadbalancer/app/chatroom-dev-alb/c24765c483be933b",
            "arn_suffix": "app/chatroom-dev-alb/c24765c483be933b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "chatroom-dev-alb-1498760335.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:627195602448:loadbalancer/app/chatroom-dev-alb/c24765c483be933b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chatroom-dev-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-04f5ad284078f4bf6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04227272510c8578b"
              },
              {
                "subnet_id": "subnet-07afdca43e3825236"
              }
            ],
            "subnets": [
              "subnet-04227272510c8578b",
              "subnet-07afdca43e3825236"
            ],
            "tags": {
              "Name": "chatroom-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-alb",
              "Project": "chatroom"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:loadbalancer/app/chatroom-dev-alb/c24765c483be933b"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:listener/app/chatroom-dev-alb/c24765c483be933b/17b0ba211ac469be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:targetgroup/chatroom-dev-gw-tg/2ac6f030fbc082c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:627195602448:listener/app/chatroom-dev-alb/c24765c483be933b/17b0ba211ac469be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:loadbalancer/app/chatroom-dev-alb/c24765c483be933b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:listener/app/chatroom-dev-alb/c24765c483be933b/17b0ba211ac469be"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.gateway",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:targetgroup/chatroom-dev-gw-tg/2ac6f030fbc082c3",
            "arn_suffix": "targetgroup/chatroom-dev-gw-tg/2ac6f030fbc082c3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:627195602448:targetgroup/chatroom-dev-gw-tg/2ac6f030fbc082c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:627195602448:loadbalancer/app/chatroom-dev-alb/c24765c483be933b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "chatroom-dev-gw-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "chatroom-dev-gw-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-gw-tg",
              "Project": "chatroom"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:627195602448:targetgroup/chatroom-dev-gw-tg/2ac6f030fbc082c3"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dee2987bd726947",
            "arn": "arn:aws:ec2:us-west-2:627195602448:elastic-ip/eipalloc-08dee2987bd726947",
            "association_id": "eipassoc-0878acdd9335ff88a",
            "domain": "vpc",
            "id": "eipalloc-08dee2987bd726947",
            "network_border_group": "us-west-2",
            "network_interface": "eni-03b8d6d1bc34a8ad4",
            "private_dns": "ip-10-10-0-21.us-west-2.compute.internal",
            "private_ip": "10.10.0.21",
            "public_dns": "ec2-184-32-202-201.us-west-2.compute.amazonaws.com",
            "public_ip": "184.32.202.201",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-nat-eip-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-nat-eip-0",
              "Project": "chatroom"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aada8f20b10fdd92",
            "arn": "arn:aws:ec2:us-west-2:627195602448:elastic-ip/eipalloc-0aada8f20b10fdd92",
            "association_id": "eipassoc-09fbe4b4763744acc",
            "domain": "vpc",
            "id": "eipalloc-0aada8f20b10fdd92",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0f05edfa76d6e7def",
            "private_dns": "ip-10-10-1-140.us-west-2.compute.internal",
            "private_ip": "10.10.1.140",
            "public_dns": "ec2-52-11-6-97.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.6.97",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-nat-eip-1",
              "Project": "chatroom"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:internet-gateway/igw-0a5f9ef6bfdc56c34",
            "id": "igw-0a5f9ef6bfdc56c34",
            "owner_id": "627195602448",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-igw",
              "Project": "chatroom"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dee2987bd726947",
            "association_id": "eipassoc-0878acdd9335ff88a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-019d5343ef5d51e74",
            "network_interface_id": "eni-03b8d6d1bc34a8ad4",
            "private_ip": "10.10.0.21",
            "public_ip": "184.32.202.201",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07afdca43e3825236",
            "tags": {
              "Name": "chatroom-dev-nat-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-nat-0",
              "Project": "chatroom"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "nat-019d5343ef5d51e74",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aada8f20b10fdd92",
            "association_id": "eipassoc-09fbe4b4763744acc",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0824359f13bf50750",
            "network_interface_id": "eni-0f05edfa76d6e7def",
            "private_ip": "10.10.1.140",
            "public_ip": "52.11.6.97",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04227272510c8578b",
            "tags": {
              "Name": "chatroom-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-nat-1",
              "Project": "chatroom"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "nat-0824359f13bf50750",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f280a2304a78ee711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019d5343ef5d51e74",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0f280a2304a78ee71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0f280a2304a78ee71"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_app",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-044127aae8d7fda471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0824359f13bf50750",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-044127aae8d7fda47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-044127aae8d7fda47"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_app",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_data_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b8684b068616d9151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019d5343ef5d51e74",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0b8684b068616d915",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0b8684b068616d915"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_data",
            "module.network.aws_subnet.private_data",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07f0997538d5887bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0824359f13bf50750",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-07f0997538d5887bc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-07f0997538d5887bc"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_data",
            "module.network.aws_subnet.private_data",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a5f9ef6bfdc56c34",
            "id": "r-rtb-045dd3fbe313ef2581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-045dd3fbe313ef258",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-045dd3fbe313ef258"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:route-table/rtb-0f280a2304a78ee71",
            "id": "rtb-0f280a2304a78ee71",
            "owner_id": "627195602448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019d5343ef5d51e74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chatroom-dev-private-app-rt-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-app-rt-0",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtb-0f280a2304a78ee71",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_app",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:route-table/rtb-044127aae8d7fda47",
            "id": "rtb-044127aae8d7fda47",
            "owner_id": "627195602448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0824359f13bf50750",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chatroom-dev-private-app-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-app-rt-1",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtb-044127aae8d7fda47",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_app",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:route-table/rtb-0b8684b068616d915",
            "id": "rtb-0b8684b068616d915",
            "owner_id": "627195602448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019d5343ef5d51e74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chatroom-dev-private-data-rt-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-data-rt-0",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtb-0b8684b068616d915",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_data",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:route-table/rtb-07f0997538d5887bc",
            "id": "rtb-07f0997538d5887bc",
            "owner_id": "627195602448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0824359f13bf50750",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chatroom-dev-private-data-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-data-rt-1",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtb-07f0997538d5887bc",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_data",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:route-table/rtb-045dd3fbe313ef258",
            "id": "rtb-045dd3fbe313ef258",
            "owner_id": "627195602448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5f9ef6bfdc56c34",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chatroom-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-public-rt",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtb-045dd3fbe313ef258",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fedb36e9246201d3",
            "region": "us-west-2",
            "route_table_id": "rtb-0f280a2304a78ee71",
            "subnet_id": "subnet-04b307ec21f9d002b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtbassoc-0fedb36e9246201d3",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_route_table.private_app",
            "module.network.aws_subnet.private_app",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063e514f3237f492a",
            "region": "us-west-2",
            "route_table_id": "rtb-044127aae8d7fda47",
            "subnet_id": "subnet-04369b1bdaed3f7ba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtbassoc-063e514f3237f492a",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_route_table.private_app",
            "module.network.aws_subnet.private_app",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed5930b0d151bca4",
            "region": "us-west-2",
            "route_table_id": "rtb-0b8684b068616d915",
            "subnet_id": "subnet-09ff0432ad8e7caab"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtbassoc-0ed5930b0d151bca4",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_route_table.private_data",
            "module.network.aws_subnet.private_data",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051264619d868835e",
            "region": "us-west-2",
            "route_table_id": "rtb-07f0997538d5887bc",
            "subnet_id": "subnet-0726d7ad6ae3b222c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtbassoc-051264619d868835e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_route_table.private_data",
            "module.network.aws_subnet.private_data",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae4091b3ec48d424",
            "region": "us-west-2",
            "route_table_id": "rtb-045dd3fbe313ef258",
            "subnet_id": "subnet-07afdca43e3825236"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtbassoc-0ae4091b3ec48d424",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2cccedbac32e0f2",
            "region": "us-west-2",
            "route_table_id": "rtb-045dd3fbe313ef258",
            "subnet_id": "subnet-04227272510c8578b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "rtbassoc-0e2cccedbac32e0f2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:subnet/subnet-04b307ec21f9d002b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b307ec21f9d002b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627195602448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-private-app-0",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-app-0",
              "Project": "chatroom",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "subnet-04b307ec21f9d002b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:subnet/subnet-04369b1bdaed3f7ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04369b1bdaed3f7ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627195602448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-private-app-1",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-app-1",
              "Project": "chatroom",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "subnet-04369b1bdaed3f7ba",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:subnet/subnet-09ff0432ad8e7caab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ff0432ad8e7caab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627195602448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-private-data-0",
              "Tier": "private-data"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-data-0",
              "Project": "chatroom",
              "Tier": "private-data"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "subnet-09ff0432ad8e7caab",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:subnet/subnet-0726d7ad6ae3b222c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726d7ad6ae3b222c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627195602448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-private-data-1",
              "Tier": "private-data"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-private-data-1",
              "Project": "chatroom",
              "Tier": "private-data"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "subnet-0726d7ad6ae3b222c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:subnet/subnet-07afdca43e3825236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07afdca43e3825236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627195602448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-public-0",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-public-0",
              "Project": "chatroom",
              "Tier": "public"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "subnet-07afdca43e3825236",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:subnet/subnet-04227272510c8578b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04227272510c8578b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627195602448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-public-1",
              "Project": "chatroom",
              "Tier": "public"
            },
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "subnet-04227272510c8578b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:vpc/vpc-0dab25c4673aa03a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0badf73e8d35647a1",
            "default_route_table_id": "rtb-05879a5436c2b9e01",
            "default_security_group_id": "sg-09bc31acfa7aa91cd",
            "dhcp_options_id": "dopt-04c8d1c6dd6cc9fdb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dab25c4673aa03a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05879a5436c2b9e01",
            "owner_id": "627195602448",
            "region": "us-west-2",
            "tags": {
              "Name": "chatroom-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-vpc",
              "Project": "chatroom"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "vpc-0dab25c4673aa03a8",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group/sg-04f5ad284078f4bf6",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f5ad284078f4bf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "chatroom-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "627195602448",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chatroom-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-alb-sg",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sg-04f5ad284078f4bf6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group/sg-03e7471a286c055fe",
            "description": "Gateway service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e7471a286c055fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow gateway traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f5ad284078f4bf6"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "chatroom-dev-gateway-sg",
            "name_prefix": "",
            "owner_id": "627195602448",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chatroom-dev-gateway-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-gateway-sg",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sg-03e7471a286c055fe",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group/sg-0833176ea59989ebd",
            "description": "Internal gRPC services security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0833176ea59989ebd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow gateway to internal gRPC services",
                "from_port": 50051,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e7471a286c055fe"
                ],
                "self": false,
                "to_port": 50051
              },
              {
                "cidr_blocks": [],
                "description": "Allow gateway to internal gRPC services",
                "from_port": 50052,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e7471a286c055fe"
                ],
                "self": false,
                "to_port": 50052
              },
              {
                "cidr_blocks": [],
                "description": "Allow gateway to internal gRPC services",
                "from_port": 50053,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e7471a286c055fe"
                ],
                "self": false,
                "to_port": 50053
              },
              {
                "cidr_blocks": [],
                "description": "Allow internal service to internal service gRPC",
                "from_port": 50051,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 50051
              },
              {
                "cidr_blocks": [],
                "description": "Allow internal service to internal service gRPC",
                "from_port": 50052,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 50052
              },
              {
                "cidr_blocks": [],
                "description": "Allow internal service to internal service gRPC",
                "from_port": 50053,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 50053
              }
            ],
            "name": "chatroom-dev-internal-service-sg",
            "name_prefix": "",
            "owner_id": "627195602448",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chatroom-dev-internal-service-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-internal-service-sg",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sg-0833176ea59989ebd",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group/sg-0c39d966d26b02b9d",
            "description": "RDS MySQL security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c39d966d26b02b9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from internal services",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0833176ea59989ebd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "chatroom-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "627195602448",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chatroom-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-rds-sg",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sg-0c39d966d26b02b9d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group/sg-0ef9023a01df1bf99",
            "description": "Redis security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef9023a01df1bf99",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Redis from gateway",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e7471a286c055fe"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "chatroom-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "627195602448",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chatroom-dev-redis-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "chatroom-dev-redis-sg",
              "Project": "chatroom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab25c4673aa03a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sg-0ef9023a01df1bf99",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-09bb04c00010742a6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-09bb04c00010742a6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-04f5ad284078f4bf6",
            "security_group_rule_id": "sgr-09bb04c00010742a6",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-09bb04c00010742a6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "gateway_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-060cbb26f389a75dd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-060cbb26f389a75dd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-03e7471a286c055fe",
            "security_group_rule_id": "sgr-060cbb26f389a75dd",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-060cbb26f389a75dd",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "internal_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-08f422663cc9ca89d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-08f422663cc9ca89d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0833176ea59989ebd",
            "security_group_rule_id": "sgr-08f422663cc9ca89d",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-08f422663cc9ca89d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.internal_service"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-0e82df29011c90989",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-0e82df29011c90989",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0c39d966d26b02b9d",
            "security_group_rule_id": "sgr-0e82df29011c90989",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-0e82df29011c90989",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "redis_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-08d2daef033236bf5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-08d2daef033236bf5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0ef9023a01df1bf99",
            "security_group_rule_id": "sgr-08d2daef033236bf5",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-08d2daef033236bf5",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-05ab19df26f7c712f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from internet",
            "from_port": 80,
            "id": "sgr-05ab19df26f7c712f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-04f5ad284078f4bf6",
            "security_group_rule_id": "sgr-05ab19df26f7c712f",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-05ab19df26f7c712f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-065c4f23f3c0d156c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from internet",
            "from_port": 443,
            "id": "sgr-065c4f23f3c0d156c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-04f5ad284078f4bf6",
            "security_group_rule_id": "sgr-065c4f23f3c0d156c",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-065c4f23f3c0d156c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "gateway_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-06ba03bb616577a84",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow gateway traffic from ALB",
            "from_port": 8080,
            "id": "sgr-06ba03bb616577a84",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04f5ad284078f4bf6",
            "region": "us-west-2",
            "security_group_id": "sg-03e7471a286c055fe",
            "security_group_rule_id": "sgr-06ba03bb616577a84",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-06ba03bb616577a84",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal_from_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "50051",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-0ae1f87b1861a52e2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow gateway to internal gRPC services",
            "from_port": 50051,
            "id": "sgr-0ae1f87b1861a52e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e7471a286c055fe",
            "region": "us-west-2",
            "security_group_id": "sg-0833176ea59989ebd",
            "security_group_rule_id": "sgr-0ae1f87b1861a52e2",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 50051
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-0ae1f87b1861a52e2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.gateway",
            "module.security.aws_security_group.internal_service"
          ]
        },
        {
          "index_key": "50052",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-0fd604707659f7d4a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow gateway to internal gRPC services",
            "from_port": 50052,
            "id": "sgr-0fd604707659f7d4a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e7471a286c055fe",
            "region": "us-west-2",
            "security_group_id": "sg-0833176ea59989ebd",
            "security_group_rule_id": "sgr-0fd604707659f7d4a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 50052
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-0fd604707659f7d4a",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.gateway",
            "module.security.aws_security_group.internal_service"
          ]
        },
        {
          "index_key": "50053",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-0f0f0a2ec1129343e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow gateway to internal gRPC services",
            "from_port": 50053,
            "id": "sgr-0f0f0a2ec1129343e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e7471a286c055fe",
            "region": "us-west-2",
            "security_group_id": "sg-0833176ea59989ebd",
            "security_group_rule_id": "sgr-0f0f0a2ec1129343e",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 50053
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-0f0f0a2ec1129343e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.gateway",
            "module.security.aws_security_group.internal_service"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal_from_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "50051",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-00bb7df51049ee219",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal service to internal service gRPC",
            "from_port": 50051,
            "id": "sgr-00bb7df51049ee219",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0833176ea59989ebd",
            "region": "us-west-2",
            "security_group_id": "sg-0833176ea59989ebd",
            "security_group_rule_id": "sgr-00bb7df51049ee219",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 50051
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-00bb7df51049ee219",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.internal_service"
          ]
        },
        {
          "index_key": "50052",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-08bc340f594eab87a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal service to internal service gRPC",
            "from_port": 50052,
            "id": "sgr-08bc340f594eab87a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0833176ea59989ebd",
            "region": "us-west-2",
            "security_group_id": "sg-0833176ea59989ebd",
            "security_group_rule_id": "sgr-08bc340f594eab87a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 50052
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-08bc340f594eab87a",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.internal_service"
          ]
        },
        {
          "index_key": "50053",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-0bd43635921758921",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal service to internal service gRPC",
            "from_port": 50053,
            "id": "sgr-0bd43635921758921",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0833176ea59989ebd",
            "region": "us-west-2",
            "security_group_id": "sg-0833176ea59989ebd",
            "security_group_rule_id": "sgr-0bd43635921758921",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 50053
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-0bd43635921758921",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.internal_service"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-0f88b44ddae2507f4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL from internal services",
            "from_port": 3306,
            "id": "sgr-0f88b44ddae2507f4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0833176ea59989ebd",
            "region": "us-west-2",
            "security_group_id": "sg-0c39d966d26b02b9d",
            "security_group_rule_id": "sgr-0f88b44ddae2507f4",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-0f88b44ddae2507f4",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.internal_service",
            "module.security.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "redis_from_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627195602448:security-group-rule/sgr-0aa9cdfc7ef491ca0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow Redis from gateway",
            "from_port": 6379,
            "id": "sgr-0aa9cdfc7ef491ca0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e7471a286c055fe",
            "region": "us-west-2",
            "security_group_id": "sg-0ef9023a01df1bf99",
            "security_group_rule_id": "sgr-0aa9cdfc7ef491ca0",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "chatroom"
            },
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627195602448",
            "id": "sgr-0aa9cdfc7ef491ca0",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.gateway",
            "module.security.aws_security_group.redis"
          ]
        }
      ]
    }
  ]
}